# whisperFlow

./: .gitignore  CLAUDE.md  README.md  build.sh  launcher.c  pyproject.toml
Formula/: chatterbot.rb  chatterbox.rb  whisperflow.rb
chatterbot/: __init__.py  __main__.py  audio.py  cleanup.py  inject.py  menubar.py  settings.py  transcriber.py
chatterbox/: __init__.py  __main__.py  cleanup.py  icons.py  menubar.py
whisperflow/: __main__.py  inject.py  menubar.py
