[project]
name = "chatterbox"
version = "0.1.0"
description = "Local Wispr Flow clone: hold-key push-to-talk dictation with on-device Parakeet transcription"
requires-python = ">=3.10"
dependencies = [
    "parakeet-mlx>=0.3",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "pyobjc-framework-Cocoa>=10",
    "pyobjc-framework-Quartz>=10",
    # keep the resolver off numba 0.53 (pulled in via parakeet-mlx -> librosa)
    "numba>=0.60",
]

[project.scripts]
chatterbox = "chatterbox.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chatterbox"]
